<resources>
    <string name="app_name">TestAndroid</string>

    <string name="hello">Hello</string>
    <string name="world">World</string>
    <string name="wonderful">It\'s a wonderful</string>
    <string name="day">day</string>
    <string name="task1">Task1</string>

    <!--ClassWork2 -->
    <string name="class2">classwork2</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">PassWord</string>
    <string name="task2">Task 2</string>
    <string name="class3">ClassWork 3</string>
    <string name="link">http://nerdbusiness.com/articles/218-wallpapers/previews/Hamad_Darwish_dot_com_Windows_Vista_Wallpapers_16.jpg</string>
    <string name="task3">Task3</string>
    <string name="task3_button">Press to switch image</string>
    <string name="class4">Class Work 4</string>
    <string name="class5">ClassWork 5</string>
    <string name="class6">Classwork6</string>
    <string name="task4">Task4</string>
    <string name="class7">Classwork 7</string>
    <string name="task5">Task 5</string>
    <string name="class8">Classwork8</string>
    <string name="task6">Task 6</string>
    <string name="task7">Task 7</string>
    <string name="class10">Classwork 10</string>
    <string name="class12">Classwork 12</string>
    <string name="task9">Task 9</string>
    <string name="class13">Classwork 13</string>
    <string name="open1">Open Fragment 1</string>
    <string name="open2">Open Fragment 2</string>
    <string name="task10">Task 10</string>
    <string name="task11">Task 11</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="info">info</string>
    <string name="class14">ClassWork 14</string>
    <string name="empty_data">data is empty</string>
    <string name="class16">Classwork 16</string>
    <string name="task13">Task 13</string>
    <string name="task14">Task 14</string>
    <string name="task15">Task 15</string>
    <string name="class18">Classwork18</string>
</resources>
