<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/task1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1" />

    <Button
        android:id="@+id/task2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task2" />

    <Button
        android:id="@+id/task3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task3" />

    <Button
        android:id="@+id/task4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task4" />

    <Button
        android:id="@+id/task5_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task5" />
    <Button
        android:id="@+id/task6_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task6" />

    <Button
        android:id="@+id/class2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class2" />

    <Button
        android:id="@+id/class3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class3" />

    <Button
        android:id="@+id/class4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class4" />

    <Button
        android:id="@+id/class5_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class5" />

    <Button
        android:id="@+id/class6_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class6" />

    <Button
        android:id="@+id/class7_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class7" />

    <Button
        android:id="@+id/class8_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class8" />
</LinearLayout>