<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViolet"
    android:orientation="vertical"
    tools:context="by.academy.medvedeva.testandroid.task1.Task1Activity">


    <Button
        android:id="@+id/hello_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/hello" />


    <TextView
        android:id="@+id/wonderful_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wonderful"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/day_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="30sp" />




</LinearLayout>
