<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViolet"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="@dimen/classwork2_start_end_padding"
    android:paddingStart="@dimen/classwork2_start_end_padding"
    android:weightSum="100">


    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:text="@string/login" />

</LinearLayout>